Fix race condition in StupidPool.ObjectResourceHandler.get(); Make ObjectResourceHander use relatively light-weight sun.misc.Cleaner instead of implementing finalize(); Try return the object back to the pool in Cleaner.clean()